feat: implemented the button click events for the game to work: git push

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,6 @@
 body {
-    text-align:center;
-    background-color:aliceblue;
+    text-align: center;
+    background-color:floralwhite;
 }
 
 button {
